<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_daily"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_24">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_240"
            android:layout_marginTop="@dimen/spacing_20"
            app:cardCornerRadius="@dimen/spacing_16"
            app:cardElevation="@dimen/spacing_4"
            app:strokeWidth="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mealIMGPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/nutri"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_40"
            android:layout_marginStart="@dimen/spacing_4">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/spacing_16">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_calories_label"
                    android:textSize="@dimen/login_text_size"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_regular"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/meal_LBL_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_default_calories"
                    android:textSize="20sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_protein_label"
                    android:textSize="20sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_regular"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/meal_LBL_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_default_protein"
                    android:textSize="20sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_carbs_label"
                    android:textSize="20sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_regular"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/meal_LBL_carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_default_carbs"
                    android:textSize="20sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/bright_gray"
            android:layout_marginVertical="36dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_daily_targets"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginBottom="24dp"
            android:textColor="@color/text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_target_calories"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_regular"/>
        </RelativeLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/meal_PRG_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="80"
            app:trackThickness="16dp"
            app:trackCornerRadius="8dp"
            app:indicatorColor="@color/brand_button_light_muted"
            app:trackColor="@color/bright_gray"
            android:layout_marginBottom="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_target_protein"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_regular"/>
        </RelativeLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/meal_PRG_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="60"
            app:trackThickness="16dp"
            app:trackCornerRadius="8dp"
            app:indicatorColor="@color/brand_button_light_muted"
            app:trackColor="@color/bright_gray"
            android:layout_marginBottom="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_target_carbs"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_regular"/>
        </RelativeLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/meal_PRG_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="90"
            app:trackThickness="16dp"
            app:trackCornerRadius="8dp"
            app:indicatorColor="@color/brand_button_light_muted"
            app:trackColor="@color/bright_gray"
            android:layout_marginBottom="32dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mealBTNSave"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/min_height"
            android:layout_margin="24dp"
            android:background="@drawable/btn_gradient"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/save_meal"
            android:textColor="@color/background_gray_smoke"
            app:backgroundTint="@null"
            android:textSize="@dimen/login_text_size"
            app:cornerRadius="8dp"
            app:strokeColor="@color/aa_button_primary_bg"
            app:strokeWidth="@dimen/button_stroke_width" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>